--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,8 @@ border-bottom: 1px solid #ECECEC;
 }
 .site-nav .link.current {
     color: var(--accent-color);
+    border-bottom: 4px solid var(--accent-color);
+    border-radius: 1px;
 }
 
 .header-list {
@@ -343,8 +345,8 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
-.company-link:hover,
-.company-link:focus {
+.company-item:hover,
+.company-item:focus {
     border: 1px solid var(--accent-color);
     color: var(--accent-color);
 }
@@ -467,6 +469,8 @@ display: flex;
 .btn-portfolio:hover { 
     background-color: var(--accent-color);
     color: var(--white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 .examples {
     gap: 30px;
@@ -493,7 +497,10 @@ display: flex;
 }
 .projects {
     width: 370px;
-    
+}
+.projects:hover,
+.projects:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .name-project {
     color: var(--title-text-color);
@@ -507,6 +514,8 @@ display: flex;
     line-height: calc(26 / 16);
     letter-spacing: 0.03em;
     border-radius: 4px;
+    border: 0px;
+    
 }
 
 .footer-item:not(:last-child) {
