--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,8 @@ body {
     color: var(--primary-text-color);
     text-decoration: none;
 
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list .list-item:not(:last-child) {
@@ -107,6 +109,9 @@ border-bottom: 1px solid #ECECEC;
     font-weight: 500;
     line-height: calc(16 / 14);
     letter-spacing: 0.02em;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mail {
     display: flex;
@@ -122,6 +127,9 @@ border-bottom: 1px solid #ECECEC;
     line-height: calc(16 / 14);
     letter-spacing: 0.02em;
     color:var(--title-text-color);
+    
+    transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link:hover,
 .link:focus {
@@ -314,9 +322,15 @@ justify-content: center;
     height: 44px;
     border-radius: 50%;
 
+    transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .socials-icon {
  fill: #AFB1B8;
+
+transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Смена текста при ховере фокусе */
 
@@ -358,6 +372,9 @@ gap: 30px;
     justify-content: center;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+
+    transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .company-icon {
@@ -481,6 +498,19 @@ display: flex;
     padding-bottom: 94px;
 }
 /* Наші роботи */
+.btn-portfolio {
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: calc(26 / 16);
+    letter-spacing: 0.03em;
+    border-radius: 4px;
+    border: 0px;
+    
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 .btn-portfolio:focus,
 .btn-portfolio:hover { 
     background-color: var(--accent-color);
@@ -513,6 +543,9 @@ display: flex;
 }
 .projects {
     width: 370px;
+
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects:hover,
 .projects:focus {
@@ -523,21 +556,11 @@ display: flex;
     line-height: calc(30 / 16);
     letter-spacing: 0.03em;
 }
-.btn-portfolio {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: calc(26 / 16);
-    letter-spacing: 0.03em;
-    border-radius: 4px;
-    border: 0px;
-    
-}
+
 
 .footer-item:not(:last-child) {
 margin-bottom: 9px;
 }
-/* Наши роботы */
 
 .work {
     justify-content: center;
@@ -568,9 +591,103 @@ margin-bottom: 9px;
     border-bottom: 30px;
     border-left: 30px;
 }
+
+/* Pop-up windows "thumb" */
+
+.team-thumb {
+position: relative;
+/* hidden by text overflow */
+overflow: hidden;
+}
+.overlay {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 63px;
+    padding-bottom: 63px;
+   position: absolute; 
+   top: 0;
+   left: 0;
+/* starting point */
+    transform: translateY(100%);
+
+   width: 100%;
+   height: 100%;
+
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   backdrop-filter: blur(4px);
+   background-color:rgb(33, 149, 243, 0.9);
+
+    transition: transform 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.overlay-text {
+    color: var(--white-color);
+}
+.list-item:hover .overlay,
+.list-item:focus .overlay {
+    /* hover point */
+    transform: translateY(0);
+}
+
+
+/* Modal window */
+
+.backdrop {
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0, 0, 0, 0.4) ;
+    transition: visibility 100ms, opacity 1000ms ;
+}
+
+.modal { 
+/* Centering absolutely positioned elements */
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+
+    /* end */
+
+    width: 528px;
+    height: 581px;
+    background-color: var(--white-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 16px;
+    border-radius: 4px;
+}
+.modal-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    width: 35px;
+    height: 35px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 50% ;
+    background: var(--white-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    
+    cursor: pointer;
+}
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
 /* Основной цвет #212121 */
 /* Вторичный цвет #757575 */
 /* Акцент #2196F3  */
 /* белый цвет #FFFFFF */
 /* номер в конце color: rgba(255, 255, 255, 0.6); */
 /* вторичный цвет фона #F5F4FA */
+
